# orosu

./: .gitignore  Cargo.toml  README.md  action.yml  config.example.yaml  getting-started.md  index.js  index.md  long_script.sh  main.js  package-lock.json  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
.github/workflows/: build.yaml  publish.yaml  tests.yaml
.vitepress/: config.mts
client/: Cargo.toml
client/src/: arguments.rs  main.rs
deb/: public.key
deb/dists/stable/: InRelease  Release  Release.gpg
deb/dists/stable/main/binary-amd64/: Packages
deb/dists/stable/main/binary-arm64/: Packages
deb/pool/main/: orosu-amd64_0.1.0-1_amd64.deb  orosu-amd64_0.1.1-1_amd64.deb  orosu-arm64_0.1.0-1_arm64.deb  orosu-arm64_0.1.1-1_arm64.deb  orosu-client_0.2.1-1_amd64.deb  orosu-client_0.2.1-1_arm64.deb  orosu-client_0.2.2-1_amd64.deb  orosu-client_0.2.2-1_arm64.deb  orosu-client_0.2.3-1_amd64.deb  orosu-client_0.2.3-1_arm64.deb  orosu-client_0.2.4-1_amd64.deb  orosu-client_0.2.4-1_arm64.deb  orosu-client_0.2.5-1_amd64.deb  orosu-client_0.2.5-1_arm64.deb  orosu-client_0.3.0-1_amd64.deb  orosu-client_0.3.0-1_arm64.deb  orosu_0.1.2-1_amd64.deb  orosu_0.1.2-1_arm64.deb  orosu_0.1.3-1_amd64.deb  orosu_0.1.3-1_arm64.deb  orosu_0.1.4-1_amd64.deb  orosu_0.1.4-1_arm64.deb  orosu_0.1.5-1_amd64.deb  orosu_0.1.5-1_arm64.deb  orosu_0.1.6-1_amd64.deb  orosu_0.1.6-1_arm64.deb  orosu_0.1.7-1_amd64.deb  orosu_0.1.7-1_arm64.deb  orosu_0.1.8-1_amd64.deb  orosu_0.1.8-1_arm64.deb  orosu_0.1.9-1_amd64.deb  orosu_0.1.9-1_arm64.deb  orosu_0.2.0-1_amd64.deb  orosu_0.2.0-1_arm64.deb  orosu_0.2.1-1_amd64.deb  orosu_0.2.1-1_arm64.deb  orosu_0.2.2-1_amd64.deb  orosu_0.2.2-1_arm64.deb  orosu_0.2.3-1_amd64.deb  orosu_0.2.3-1_arm64.deb  (+6 more)
debian/: orosu-server.service
keygen/: Cargo.toml
keygen/src/: main.rs
lib/: Cargo.toml
lib/src/: client.rs  cryptography.rs  lib.rs  server_address.rs
lib/src/api/: client.rs  envelopes.rs  file_chunk.rs  mod.rs
lib/src/server/: auth_scope.rs  mod.rs
lib/src/server/handler/: mod.rs  tasks.rs
lib/src/tasks/: mod.rs  task.rs  timestamped.rs
migrations/2025-11-28-110216-0000_scripts/: down.sql  up.sql
migrations/2025-11-28-213621-0000_tasks/: up.sql
migrations/2025-11-29-102443-0000_workers/: down.sql  up.sql
server/: Cargo.toml
server/src/: arguments.rs
src/: client.rs  client_key.rs  configuration.rs  lib.rs  schema.rs  script.rs
src/api/: client.rs  envelopes.rs  mod.rs  user_agent_header.rs
src/database/: migrations.rs  mod.rs
src/model/: database_script_status.rs  database_task.rs  database_uuid.rs  mod.rs  task_arguments.rs  worker_secret_key.rs
src/model/api/: mod.rs  script_response_payload.rs  task_response_payload.rs  worker_response_payload.rs  ws.rs
src/scripts/: mod.rs  scripts_watcher.rs
src/server/: auth_scope.rs  mod.rs  server.rs
src/server/handler/: auth.rs  mod.rs  scripts.rs  tasks.rs  web_app.rs  workers.rs  ws.rs
src/server/handler/ws/: active_tasks.rs  new_task.rs
src/tasks/: active_task.rs  mod.rs  task.rs  task_update_notification.rs  tasks.rs  timed_task_event.rs
