[package]
name = "orosu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive", "default"] }
tower-http = { version = "0.6.7", features = ["trace"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
axum-client-ip = "1.1.3"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
bytes = "1.11.0"
serde-saphyr = "0.0.11"
cidr = { version = "0.3.2", features = ["no_unsafe", "serde"] }
