[package]
name = "orosu-client"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Ilya Nixan <nixan@nerdy.pro>"]
description = "CI task remote executor"
repository = "https://github.com/orosu-ci/orosu"
homepage = "https://orosu.dev"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.53"
orosu = { path = '../lib' }
tokio = "1.48.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
