[package]
name = "orosu-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CI task remote executor client"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.53"
orosu = { path = '../lib' }
tokio = "1.48.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[package.metadata.deb]
name = "orosu-client"
maintainer = "Ilya Nixan <nixan@nerdy.pro>"
copyright = "2025, Ilya Nixan <nixan@nerdy.pro>"
license-file = ["../LICENSE-APACHE", "0"]
extended-description = "Allows secure remote execution of predefined scripts via authenticated clients."
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    { source = 'target/release/orosu-client', dest = 'usr/bin/', mode = '755' },
]

[package.metadata.deb.variants.amd64]
[package.metadata.deb.variants.arm64]
