[package]
name = "orosu-keygen"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Ilya Nixan <nixan@nerdy.pro>"]
description = "CI task remote executor"
repository = "https://github.com/orosu-ci/orosu"
homepage = "https://orosu.dev"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.53"
orosu = { path = '../lib' }
