[package]
name = "orosu"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Ilya Nixan <nixan@nerdy.pro>"]
description = "CI task remote executor"
repository = "https://github.com/orosu-ci/orosu"
homepage = "https://orosu.dev"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive", "default"] }
tower-http = { version = "0.6.7", features = ["trace"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
axum-client-ip = "1.1.3"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3.31"
bytes = "1.11.0"
serde-saphyr = "0.0.11"
cidr = { version = "0.3.2", features = ["no_unsafe", "serde"] }
users = "0.11.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
base64 = "0.22.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rkyv = "0.8.12"