[package]
name = "orosu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CI task remote executor library"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive", "default"] }
tower-http = { version = "0.6.7", features = ["trace"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
axum-client-ip = "1.1.3"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3.31"
bytes = "1.11.0"
serde-saphyr = "0.0.11"
cidr = { version = "0.3.2", features = ["no_unsafe", "serde"] }
users = "0.11.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
base64 = "0.22.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rkyv = "0.8.12"