[package]
name = "orosu-server"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Ilya Nixan <nixan@nerdy.pro>"]
description = "CI task remote executor"
repository = "https://github.com/orosu-ci/orosu"
homepage = "https://orosu.dev"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.53"
dotenvy = "0.15.7"
orosu = { path = '../lib' }
tokio = "1.48.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[package.metadata.deb]
name = "orosu"
maintainer = "Ilya Nixan <nixan@nerdy.pro>"
copyright = "2025, Ilya Nixan <nixan@nerdy.pro>"
license-file = ["LICENSE-MIT", "0"]
extended-description = "Allows secure remote execution of predefined scripts via authenticated clients."
depends = "$auto, systemd"
section = "net"
priority = "optional"
conf-files = ["/etc/orosu/config.yaml"]
maintainer-scripts = "debian/"
assets = [
    { source = 'target/release/orosu-server', dest = 'usr/bin/', mode = '755' },
    { source = 'target/release/orosu-keygen', dest = 'usr/bin/', mode = '755' },
    { source = 'config.example.yaml', dest = 'etc/orosu/config.yaml', mode = '644' }
]

[package.metadata.deb.systemd-units]
unit-name = "orosu-server"
unit-scripts = "debian/"

[package.metadata.deb.variants.amd64]
[package.metadata.deb.variants.arm64]
